<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_tile"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
             android:padding="10dip" >

            <EditText
                android:id="@+id/edit_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress" >
            </EditText>

            <EditText
                android:id="@+id/edit_subject_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:hint="@string/email_subject" />

            <EditText
                android:id="@+id/edit_body_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dip"
                android:hint="@string/email_text"
                android:inputType="textMultiLine" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dip" >

                <Button
                    android:id="@+id/button_send"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.3"
                    android:text="@string/email_button_send"
                    android:background="@drawable/btn_blue" />

                <Button
                    android:id="@+id/button_draft"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.3"
                    android:text="@string/email_button_draft"
                    android:background="@drawable/btn_blue"
                    android:layout_marginLeft="10dip" />

                <Button
                    android:id="@+id/button_delete"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.3"
                    android:text="@string/email_button_cancel"
                    android:background="@drawable/btn_blue"
                    android:layout_marginLeft="10dip" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>