<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_tile"
    android:orientation="vertical"
    android:padding="10dip" >

    <TextView
        style="@style/radiobox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/settings"
        android:textSize="25dip" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TextView
                style="@style/radiobox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dip"
                android:text="@string/username"
                android:textSize="20dip"
                 />

            <EditText
                android:id="@+id/setting_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dip"
                android:singleLine="true"
                 android:background="@drawable/subject_shape" />

            <TextView
                style="@style/radiobox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:text="@string/password"
                android:textSize="20dip" />

            <EditText
                android:id="@+id/setting_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dip"
                android:password="true"
                android:singleLine="true"
                 android:background="@drawable/subject_shape" />

            <TextView
                style="@style/radiobox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:text="@string/smtp"
                android:textSize="20dip" />

            <EditText
                android:id="@+id/setting_smtp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dip"
                android:singleLine="true"
                 android:background="@drawable/subject_shape" />

            <TextView
                style="@style/radiobox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:text="@string/pop3"
                android:textSize="20dip" />

            <EditText
                android:id="@+id/setting_pop3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dip"
                android:singleLine="true"
                 android:background="@drawable/subject_shape" />

            <Button
                android:id="@+id/setting_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dip"
                android:text="@string/save" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>