<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/paper002" >
  
      
    
    <TextView
        android:id="@+id/text_comune_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="nome comune"
        android:gravity="center"
        android:paddingTop="5dip"
        android:paddingBottom="5dip"
        style="@style/text_title"/>
    <TextView 
        android:id="@+id/text_cap_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cap"
        android:gravity="center"
       	android:textColor="@android:color/black"
        android:textSize="11dip"
       />
    <LinearLayout 
        android:layout_width="match_parent"
    	android:layout_height="match_parent"
   		android:orientation="vertical"
   		android:layout_margin="5dip">
   		<TextView
        android:id="@+id/header_amministazioni_comune"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/amministrazioni_disponibili_comune"
        android:gravity="center"
        style="@style/radiobox"
        android:layout_marginBottom="5dip"
        />
        <ListView 
           android:layout_width="match_parent"
    		android:layout_height="match_parent"
    		android:id="@+id/list_amministrazioni"
    		android:cacheColorHint="@android:color/transparent"
 		 />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            android:text="@string/text_noresult_amministrazione"
            android:gravity="center"
            style="@style/radiobox"/>
        
        
    </LinearLayout>
    
    
    
    
    
    

</LinearLayout>